--- a/index.html
+++ b/index.html
@@ -4,38 +4,128 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Go Pro</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="navbar">
-        <img src="ressources/Logo.png" class="logonav">
-        <ul>
-            <li class="navitems">Home</i></li>
+    <div class="row navbar">
+        <img src="ressources/logo1.png" class="col-md-2 offset-md-1  logonav">
+        <ul id="ulbar" class="col-md-4 offset-md-1 ">
+            <li class="navitems " >Home</li>
             <li class="navitems after">About</li>
-            <li class="navitems after">Company</li>
-            <li class="navitems after">Pages</li>
+            <!-- <li class="navitems after">Company</li>
+            <li class="navitems after">Pages</li> -->
             <li class="navitems after">Blog</li>
             <li class="navitems after">Shop</li>
         </ul>
-        <div class="btnNav">  Get Started <i class="fa fa-arrow-right"></i>  </div>
-        <i class="fa  fa-bars"></i>
+        <div class="btnNav col-md-1  ">  Get Started <i class="fa fa-arrow-right"></i>  </div>
+        <i class="col-md-2 fa  fa-bars"></i>
     </div>
-    <div class="container">
-        <div class="cont1">
-            <div class="btn1">Digital Marketing Agency</div>
-            <h1>Advanced analytics to grow your business</h1>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <div class="btns"> 
-                <div class="btn2">Get Started <i class="fa fa-arrow-right"></i></div>
-                <div class="btn3">How it works <i class="fa fa-arrow-right"></i></div>
+    <section id="container" class="row ">
+            <div class=" cont1 offset-md-1 col-md-5">
+                <div class="col-md-2 btn1">Basic Or Home</div>
+                <h1 c>Advanced analytics to grow your business</h1>
+                <p class="p1">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <div class="btns"> 
+                    <button type="button" id="btn2" class="btn ">Get Started <i class="fa fa-arrow-right"></i></button>
+                    <div class=" btn3">How it works <i class="fa fa-arrow-right"></i></div>
+                </div>
+            </div>
+            <div class="cont-img col-md-3 offset-md-1 ">
+                <img src="ressources/section.png" alt="">
+            </div>
+    </section>
+
+    <section class="section1 row">
+        <div class=" col-md-6 offset-md-1">
+            <img id="img2" src="ressources/section1.png" alt="">
+        </div>
+        <div class="col-md-4">
+            <div class="col-md-2 btn1">Discover Us</div>
+            <p class="h2">Fresh Ideas for your business design. </p>
+            <p class="p1">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <div class="gardy">
+                <img class="imgs" src="ressources/Ellipse 1.png" alt="">
+                <p class="name-p">Garddy</p>
+            </div>
+            <p class="pgardy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque, quod accusantium quidem aliquid odio deleniti ab sint facilis nulla? Magnam, ipsam velit.</p>
+            <div class="gardy">
+                <img class="imgs"  src="ressources/Ellipse 2.png" alt="">
+                <p class="name-p">Herdic</p>
+            </div>
+            <p class="pgardy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque, quod accusantium quidem aliquid odio deleniti ab sint facilis nulla? Magnam, ipsam velit.</p>
+        </div>
+    </section>
+    <section id="section2">
+        <div class="row">
+            <p id="h2-1" class="col-md-4 offset-md-4 ">Fresh Ideas for your business design. </p>
+            <p id="pcenter" class="col-md-4 offset-md-4 ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet </p>
+        </div>
+        <div class="row">
+            <div class="col-md-3 offset-md-1 m">
+                <div class="gardy">
+                    <img class="imgs"  src="ressources/Ellipse 3.png" alt="">
+                    <p class="name-p">Eleanor Pena</p>
+                </div>
+                <p class="pgardy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque, quod accusantium quidem aliquid odio deleniti ab sint facilis nulla? Magnam, ipsam velit.</p>
+            </div>
+            <div class="col-md-3 ml">
+                <div class="gardy">
+                    <img class="imgs"  src="ressources/Ellipse 4.png" alt="">
+                    <p class="name-p">Cody Fisher</p>
+                </div>
+                <p class="pgardy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque, quod accusantium quidem aliquid odio deleniti ab sint facilis nulla? Magnam, ipsam velit.</p>
+            </div>
+            <div class="col-md-3 ml">
+                <div class="gardy">
+                    <img class="imgs"  src="ressources/Ellipse 5.png" alt="">
+                    <p class="name-p">Leslie Alexander</p>
+                </div>
+                <p class="pgardy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque, quod accusantium quidem aliquid odio deleniti ab sint facilis nulla? Magnam, ipsam velit.</p>
             </div>
         </div>
-        <div class="cont-img">
-            <img src="ressources/Image1.png" alt=""></div>
+    </section>
+
+    <div class="row foot ">
+        <div class="col-md-3 offset-md-2 rit">
+           <p class="name-pf">Eleanor Pena</p>
+           <p class="pena">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus officiis commodi, nostrum autem veniam magnam vel, doloremque,  sint facilis nulla? .</p>
         </div>
+        <div class="col-md-2 offset-md-1 ">
+            <p class="name-pf">ABOUT US</p>
+            <ul class="ul-foot">
+                <li><i class="fa fa-angle-right"></i>  Mission & Vision</li>
+                <li><i class="fa fa-angle-right"></i> Our Company</li>
+                <li><i class="fa fa-angle-right"></i> Our Projects</li>
+                <li><i class="fa fa-angle-right"></i> Our Team</li>
+            </ul>
+        </div>
+        <div class="col-md-2 ">
+            <p class="name-pf">DISCOVER</p>
+            <ul class="ul-foot">
+                <li><i class="fa fa-angle-right"></i>  Projects & Research</li>
+                <li><i class="fa fa-angle-right"></i> Clents Review</li>
+                <li><i class="fa fa-angle-right"></i> Our Projects</li>
+                <li><i class="fa fa-angle-right"></i> Our Team</li>
+            </ul>
+        </div>
+        <div class="col-md-2">
+            <p class="name-pf">USEFUL LINKS</p>
+            <ul class="ul-foot">
+                <li><i class="fa fa-angle-right"></i> Contact Us</li>
+                <li><i class="fa fa-angle-right"></i> Terms & Conditions</li>
+                <li><i class="fa fa-angle-right"></i> Review</li>
+            </ul>
+        </div>
+        
+    </div>
+
+<footer>
+    <p id="lastp">Copyright, All Rights Resreved</p>
+</footer>
     <script src="js/script.js"></script>
 </body>
 </html>
